--- a/examples/dreambooth/requirements.txt
+++ b/examples/dreambooth/requirements.txt
@@ -1,6 +1,6 @@
 diffusers==0.7.2
 accelerate==0.14.0
-torchvision==0.14.0+cu117
+torchvision==0.14.0
 transformers==4.24.0
 ftfy==6.1.1
 tensorboard==2.11.0
